--- a/index.html
+++ b/index.html
@@ -8,30 +8,26 @@
 			background-color: #222;
 			color: #EEE;
 		}
+
+		#video_bmrising {
+			display: block;
+			position: fixed;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+		}
+
 	</style>
 
+	<!-- https://github.com/videojs/video.js -->
 	<link href="http://vjs.zencdn.net/4.1.0/video-js.css" rel="stylesheet">
 	<script src="http://vjs.zencdn.net/4.1.0/video.js"></script>
 	<script src="media.youtube.js"></script>
 </head>
 <body>
 
-<!--
-	<video id="video" class="video-js vjs-default-skin" controls
-	 preload="auto" width="560" height="315" poster="https://i1.ytimg.com/vi/1CH76F1mFis/mqdefault.jpg"
-	 data-setup="{}">
-	 <source src="http://www.youtube.com/embed/1CH76F1mFis" type='video/mp4'>
-	 <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
-	</video>
--->
-
-<!--
-	<video>
-		<source src="http://www.youtube.com/embed/1CH76F1mFis" type='video/mp4'>
-	</video>
--->
-
-	<video id="example_video_1" 
+	<video id="video_bmrising" 
 	  class="video-js vjs-default-skin" 
 	  controls
 	  preload="auto" 
